--- a/semiProject/src/main/resources/templates/member/login.html
+++ b/semiProject/src/main/resources/templates/member/login.html
@@ -35,7 +35,7 @@
             <input type="checkbox" name="saveId" id="saveId"> 아이디 저장
           </label>
           <div class="find-links">
-            <a href="#">아이디 찾기</a> &ensp;|
+            <a href="/member/findId">아이디 찾기</a> &ensp;|
             <a href="#">비밀번호 찾기</a>
           </div>
         </div>
