--- a/semiProject/src/main/resources/static/css/board/boardList.css
+++ b/semiProject/src/main/resources/static/css/board/boardList.css
@@ -169,3 +169,9 @@ a {
 #content-title:hover {
   text-decoration: underline;
 }
+.empty-message {
+  text-align: center;
+  padding: 40px 0;
+  color: #888;
+  font-size: 25px;
+}
