[Update] 게시글 작성시 이미지 추가 및 봉사후기 썸네일 구현

--- a/semiProject/src/main/resources/templates/board/boardList.html
+++ b/semiProject/src/main/resources/templates/board/boardList.html
@@ -67,8 +67,9 @@
                   th:href="@{/board/{boardCode}/{boardNo}(boardCode=${boardCode}, boardNo=*{boardNo}, cp=${pagination.currentPage})}"
                 >
                   <img
-                    src="/images/volunteer.jpeg"
-                    alt=""
+                    th:src="${board.thumbnailPath != null 
+           ? board.thumbnailPath 
+           : '/images/volunteer.jpeg'}"
                     id="content-img-info"
                   />
                 </a>
