--- a/semiProject/src/main/resources/templates/board/boardWrite.html
+++ b/semiProject/src/main/resources/templates/board/boardWrite.html
@@ -97,7 +97,7 @@
       $(document).ready(function () {
         $("#summernote").summernote({
           width: 1130,
-          height: 150,
+          height: 300,
           lang: "ko-KR",
           focus: true,
           toolbar: [
@@ -144,9 +144,32 @@
             "50",
             "72",
           ],
+          callbacks: {
+            onImageUpload: function (files) {
+              for (let i = 0; i < files.length; i++) {
+                uploadImage(files[i]);
+              }
+            },
+          },
         });
       });
+      function uploadImage(file) {
+        const formData = new FormData();
+        formData.append("file", file);
+
+        $.ajax({
+          url: "/editBoard/image/upload",
+          type: "POST",
+          data: formData,
+          contentType: false,
+          processData: false,
+          success: function (res) {
+            $("#summernote").summernote("insertImage", res.url);
+          },
+        });
+      }
     </script>
+
     <script src="/js/board/boardWrite.js"></script>
   </body>
 </html>
