--- a/semiProject/src/main/resources/templates/email/findId.html
+++ b/semiProject/src/main/resources/templates/email/findId.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="container">
-        <h3>🔐 아이디 찾기 인증번호</h3>
+        <h3>아이디 찾기 인증번호</h3>
         <p>아래의 인증번호를 입력해주세요.</p>
         <div class="auth-key" th:text="${authKey}">123456</div>
         <p class="notice">※ 인증번호는 5분간 유효합니다.</p>
