--- a/semiProject/src/main/resources/templates/member/login.html
+++ b/semiProject/src/main/resources/templates/member/login.html
@@ -36,10 +36,10 @@
           </label>
           <div class="find-links">
             <a href="/member/findId">아이디 찾기</a> &ensp;|
-            <a href="#">비밀번호 찾기</a>
+            <a href="/member/findPw">비밀번호 찾기</a> 
           </div>
-        </div>
-
+          </div>
+      
         <button type="submit" class="btn btn-login">로그인</button>
         
         <button type="button" class="btn btn-signup" 
