--- a/semiProject/src/main/resources/static/css/board/boardDetail.css
+++ b/semiProject/src/main/resources/static/css/board/boardDetail.css
@@ -79,7 +79,8 @@
 
 #like-btn,
 #update-btn,
-#delete-btn {
+#delete-btn,
+#report-btn {
   width: 111px;
   height: 62px;
   border: none;
@@ -90,10 +91,13 @@
   font-size: 25px;
 }
 
-#like-btn,
-#update-btn,
-#delete-btn:hover {
+#like-btn:hover,
+#update-btn:hover,
+#delete-btn:hover,
+#report-btn:hover {
   cursor: pointer;
+  background-color: #ff5900;
+  color: white;
 }
 #before-board,
 #after-board {
@@ -120,6 +124,9 @@
   align-items: center;
 }
 #list-btn > a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 111px;
   height: 62px;
   border: none;
@@ -131,6 +138,8 @@
   margin-bottom: 32px;
 }
 
-#list-btn > button:hover {
+#list-btn > a:hover {
   cursor: pointer;
+  background-color: #ff5900;
+  color: white;
 }
