--- a/semiProject/src/main/resources/static/css/common/main.css
+++ b/semiProject/src/main/resources/static/css/common/main.css
@@ -50,7 +50,56 @@
   text-decoration: underline;
 }
 #mainContent > div {
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+}
+
+/* 봉사후기 */
+#volunteerReviewListContent {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  gap: 61px;
+  flex-wrap: wrap;
+}
+#content-img {
+  width: 246px;
+  height: 243px;
+  border: 1px solid #ddd;
+  border-radius: 20px;
+  overflow: hidden;
+}
+#content-img-info {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#volunteerReviewListContent {
+  display: flex;
+  gap: 61px;
+  flex-wrap: wrap;
+}
+#content-1 {
+  width: 246px;
+}
+#content-title {
+  font-size: 20px;
+  font-weight: bold;
+}
+#content-info > div {
+  display: flex;
+  justify-content: space-between;
+}
+#content-info > div > p {
+  margin: 0;
+  color: #697077;
+  font-size: 16px;
+}
+#content-title:hover {
+  text-decoration: underline;
+}
+.empty-message {
+  text-align: center;
+  padding: 40px 0;
+  color: #888;
+  font-size: 25px;
 }
