[Update] 마이페이지 JS, HTML, CSS 퍼블리싱중

--- a/semiProject/src/main/resources/templates/common/header.html
+++ b/semiProject/src/main/resources/templates/common/header.html
@@ -19,7 +19,7 @@
 					<li><b th:text="${session.loginMember.memberNickname}">사용자</b>님
 						환영합니다.</li>
 					<li><a th:href="@{/member/logout}" id="loginText">로그아웃</a></li>
-					<li><a th:href="@{/myPage/info}" id="signInText">마이페이지</a></li>
+					<li><a th:href="@{/mypage/profile}" id="signInText">마이페이지</a></li>
 				</th:block>
 			</ul>
 		</section>
