--- a/semiProject/src/main/resources/templates/mypage/profile.html
+++ b/semiProject/src/main/resources/templates/mypage/profile.html
@@ -1,80 +1,99 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>프로필 관리</title>
-  <link rel="stylesheet" href="/css/mypage.css">
-	<link rel="stylesheet" href="/css/common/common.css">
+  <title>마이페이지 - 프로필 관리</title>
+  
+  <link rel="stylesheet" href="/css/mypage/sidebar.css">
+  <link rel="stylesheet" href="/css/mypage/profile.css">
+
+  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </head>
 <body>
 
   <th:block th:replace="~{common/header}"></th:block>
 
-  <div class="mypage-wrapper">
+  <div class="mypage-container">
     
-    <aside class="sidebar">
-      <ul>
-        <li class="active">프로필 관리</li>
-        <li>내 작성글</li>
-      </ul>
-    </aside>
+    <th:block th:replace="~{mypage/sidebar(menu='profile')}"></th:block>
 
-    <main class="content-area">
-      <h2 class="page-title">프로필 관리</h2>
+    <main class="main-content">
+      <h2>프로필 관리</h2>
 
-      <form action="/mypage/update" method="post" class="profile-form">
+      <form th:action="@{/member/mypage/update}" method="post" 
+        enctype="multipart/form-data" th:object="${session.loginMember}" id="profileFrm">
         
-        <div class="profile-img-section">
-          <img src="/images/default_profile.png" alt="프로필" class="profile-img">
-          
-          <div class="nickname-input-group">
-            <label>닉네임</label>
-            <input type="text" name="userNickname" th:value="${user.nickname}" placeholder="닉네임">
-          </div>
+        <div class="profile-img-area">
+          <label for="profileImgInput">
+            <img th:src="*{profileImage != null} ? *{profileImage} : '/images/default_profile.png'" 
+                 id="profilePreview" alt="프로필 이미지">
+            <div class="edit-icon">📷</div>
+          </label>
+          <input type="file" id="profileImgInput" name="uploadFile" accept="image/*" style="display: none;">
+        </div>
+
+        <div class="form-group">
+          <label>닉네임</label>
+          <input type="text" name="nickname" th:value="*{nickname}" readonly>
         </div>
 
         <div class="form-group">
           <label>이름</label>
-          <input type="text" name="userName" th:value="${user.userName}" readonly class="readonly-input">
+          <input type="text" name="memberName" th:value="*{memberName}" readonly>
         </div>
 
         <div class="form-group">
           <label>아이디</label>
-          <input type="text" name="userId" th:value="${user.userId}" readonly class="readonly-input">
+          <input type="text" name="memberId" th:value="*{memberId}" readonly>
+        </div>
+
+        <div class="form-group">
+          <label>현재 비밀번호 <span class="required-mark">*</span></label>
+          <input type="password" name="currentPw" id="currentPw" placeholder="정보 수정을 위해 현재 비밀번호를 입력해주세요">
         </div>
 
         <div class="form-group">
           <label>비밀번호</label>
-          <input type="password" name="userPw" placeholder="비밀번호">
+          <input type="password" name="memberPw" placeholder="변경할 비밀번호를 입력하세요">
         </div>
 
         <div class="form-group">
           <label>비밀번호 확인</label>
-          <input type="password" name="userPwConfirm" placeholder="비밀번호 확인">
+          <input type="password" id="pwConfirm" placeholder="비밀번호를 다시 입력하세요">
         </div>
 
         <div class="form-group">
           <label>이메일</label>
-          <div class="input-with-btn">
-            <input type="email" name="userEmail" th:value="${user.email}" placeholder="이메일">
-            <button type="button" class="btn-orange-small">이메일 인증</button>
-          </div>
+          <input type="email" name="memberEmail" th:value="*{memberEmail}" readonly>
         </div>
 
-        <div class="form-group">
+        <div class="form-group address-group">
           <label>주소</label>
-          <input type="text" name="addr1" id="addr1" th:value="${user.addr1}" placeholder="주소지">
-          <input type="text" name="addr2" id="addr2" th:value="${user.addr2}" placeholder="상세주소" style="margin-top: 10px;">
+          
+          <div class="address-row">
+            <input type="text" id="postcode" name="postcode" placeholder="우편번호" readonly 
+                   th:value="*{postcode}">
+            <button type="button" id="searchAddressBtn" class="btn-dark">검색</button>
+          </div>
+
+          <input type="text" id="address" name="address" placeholder="기본 주소" readonly 
+                 th:value="*{address}">
+
+          <input type="text" id="detailAddress" name="detailAddress" placeholder="상세 주소" 
+                 th:value="*{detailAddress}">
         </div>
 
         <div class="btn-area">
           <button type="submit" class="btn-submit">변경</button>
         </div>
+
       </form>
     </main>
   </div>
 
   <th:block th:replace="~{common/footer}"></th:block>
+
+  <script src="/js/mypage/profile.js"></script>
 
 </body>
 </html>
